<resources>

    <string name="app_name">MOBOZO</string>
    <string name="title_activity_movie">MOBOZO</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">%1$d</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="id">id</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="tel">tel</string>
    <string name="email">email</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="mymovie">예매한 영화</string>

    <string name="whatmovie">영화뭐보죠?</string>
    <string name="navi_text">님 환영합니다.</string>

</resources>
